<resources>
    <string name="app_name">Quiz\'Em</string>
    <string name="action_settings">Settings</string>
    <string name="quizem">Quiz\'Em</string>

    //Strings for buttons
    <string name="main_manu_button">Main Menu</string>

    <string name="title_activity_quiz">Quiz</string>
    <string name="take_quiz">Take A Quiz</string>
    <string name="restart_button">Restart</string>
    <string name="make_quiz">Make A Quiz</string>
    <string name="all_quizzes">All Quizzes</string>
    <string name="delete_quiz">Delete</string>
    <string name="edit_quiz">Edit</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>

    <string name="title_activity_flash">Flash</string>
    <string name="make_flashcards">Make Flashcards</string>
    <string name="take_flashcards">Study Flashcards</string>
    <string name="all_flashcards">All Flashcards</string>

    <string name="tutorial_string">Tutorial</string>
    <string name="get_answer">Flip</string>
    <string name="restart_flash">Restart</string>
    <string name="flash_done">Done</string>

    //action bar strings.
    <string name="bar_favorites">Favorites</string>
    <string name="bar_settings">Settings</string>
    <string name="bar_search">Search</string>
    <string name="bar_help">Help</string>
    <string name="title_activity_make_quiz">MakeQuiz</string>

    //Strings for Making a Quiz
    <string name="quiz_title">Title</string>
    <string name="quiz_question">Question</string>
    <string name="quiz_answers">Answers</string>
    <string name="submit_button">Submit</string>
    <string name="title_activity_all_quizzes">AllQuizzes</string>
    <string name="title_activity_take_quiz">TakeQuiz</string>
    <string name="delete_text">Would you like to delete this?</string>
    <string name="quiz_saved">Quiz Saved</string>
    <string name="title_activity_questions">Questions</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="title_activity_make_flashcards">MakeFlashcards</string>
    <string name="title_activity_take_flashcards">TakeFlashcards</string>
    <string name="title_activity_all_flashcards">AllFlashcards</string>
    <string name="title_activity_flash_results">FlashResultsActivity</string>

    //Strings for Help functionality
    <string name="close">Close</string>

    <string name="help_next">Next</string>
    <string name="help_button">Help</string>
    <string name="help_getstarted">Let\'s Get Started, Shall We?</string>
    <string name="help_assist">Don\'t know what to do next?\n Fear not! We\'ve gotcha covered!</string>

    <string name="main_help_quiz">Tap The Quiz Button To Create Questions And Quiz Yourself!</string>
    <string name="main_help_flash">Tap The Flash Button To Create Flashcards And Study!</string>
    <string name="main_help_help">Need To Review Again? No Worries, Just Tap The Tutorial Icon!</string>

    <string name="quiz_help_takequiz">"Tap The 'Take A Quiz' Button To Quiz Yourself After Creating Questions! "</string>
    <string name="quiz_help_makequiz">Tap The \'Make A Quiz\' Button To Make Questions And Answers!</string>
    <string name="quiz_help_allquizzes">Tap The \'All Quizzes\' Button To View All Questions!</string>
    <string name="quiz_help_help">Need To Review Again? No Worries, Just Tap The Help Button!</string>

    <string name="flash_help_takeflashcards">Tap the \'Study Flashcards\' button to review your flashcards!</string>
    <string name="flash_help_makeflashcards">Tap the \'Make Flashcards\' button to create new flashcards</string>
    <string name="flash_help_allflashcards">Tap the \'All FlashCards\' button to view your flashcards!</string>
    <string name="flash_help_help">Need To Review Again? No Worries, Just Tap The Help Button!</string>


</resources>