...
        android:layout_alignStart="@+id/quiz_button" />

    <ImageButton
        style="?android:attr/buttonStyleSmall"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:id="@+id/tutorial_btn"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="showTutorial"
        android:background="@drawable/ic_help_black"/>
</RelativeLayout>
...
