...
            android:layout_alignStart="@+id/quiz_take" />


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/help_btn"
        android:background="@drawable/ic_help_black_24dp"
        android:onClick="showTutorial"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

...
